--- a/form.ui
+++ b/form.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>796</width>
+    <width>925</width>
     <height>600</height>
    </rect>
   </property>
@@ -16,9 +16,9 @@
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-10</x>
      <y>0</y>
-     <width>801</width>
+     <width>931</width>
      <height>601</height>
     </rect>
    </property>
@@ -1431,7 +1431,7 @@
         </property>
        </widget>
       </item>
-      <item>
+      <item alignment="Qt::AlignHCenter">
        <widget class="QLabel" name="MD_ResultLabel">
         <property name="text">
          <string>Result:</string>
@@ -1815,6 +1815,558 @@
       </item>
       <item>
        <widget class="QLabel" name="AT_ResultLabel">
+        <property name="text">
+         <string>Result:</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>410</y>
+       <width>254</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="TFormula">
+      <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
+       <widget class="QLabel" name="TF_TitleLabel">
+        <property name="text">
+         <string>T Formula</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="TF_InputFields">
+        <item>
+         <layout class="QVBoxLayout" name="TF_FO2">
+          <item>
+           <widget class="QLabel" name="TF_FO2Label">
+            <property name="text">
+             <string>FO2</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="TF_FO2ComboBox">
+            <item>
+             <property name="text">
+              <string>21</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>22</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>23</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>24</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>25</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>26</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>27</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>28</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>29</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>30</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>31</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>32</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>33</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>34</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>35</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>36</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>37</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>38</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>39</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>40</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>41</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>42</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>43</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>44</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>45</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>46</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>47</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>48</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>49</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>50</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>51</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>52</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>53</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>54</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>55</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>56</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>57</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>58</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>59</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>60</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>61</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>62</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>63</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>64</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>65</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>66</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>67</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>68</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>69</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>70</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>71</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>72</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>73</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>74</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>75</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>76</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>77</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>78</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>79</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>80</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>81</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>82</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>83</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>84</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>85</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>86</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>87</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>88</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>89</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>90</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>91</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>92</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>93</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>94</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>95</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>96</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>97</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>98</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>99</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>100</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="TF_PO2">
+          <item>
+           <widget class="QLabel" name="TF_PO2Label">
+            <property name="text">
+             <string>PO2</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="TF_PO2Field"/>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="TF_P">
+          <item>
+           <widget class="QLabel" name="TF_PLabel">
+            <property name="text">
+             <string>P</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="TF_PField"/>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="TF_CalculateButtons">
+        <item>
+         <widget class="QPushButton" name="TF_CalculateFO2Button">
+          <property name="text">
+           <string>Calculate FO2</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="TF_CalculatePO2Button">
+          <property name="text">
+           <string>Calculate PO2</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="TF_CalculatePButton">
+          <property name="text">
+           <string>Calculate P</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>610</x>
+       <y>10</y>
+       <width>183</width>
+       <height>130</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="GasReserve">
+      <item>
+       <widget class="QLabel" name="GR_Title">
+        <property name="text">
+         <string>Gas Reserve</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="GR_Volume">
+        <item>
+         <widget class="QLabel" name="GR_VolumeLabel">
+          <property name="text">
+           <string>Volume</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="GR_VolumeField"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="GR_ReservePercent">
+        <item>
+         <widget class="QLabel" name="GR_ReserveLabel">
+          <property name="text">
+           <string>Reserve %</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="GR_ReserveField"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="GR_CalculateButton">
+        <property name="text">
+         <string>Calculate</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="GR_ResultLabel">
         <property name="text">
          <string>Result:</string>
         </property>
